Removing comments from previous version

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -514,7 +514,7 @@ div.grippie {
 	margin-bottom: 40px;
 }
 
-#FormEditPost #PostTitle, #FormEditPost #PostSlug, #FormEditPost #PostAuthorTitle,
+#FormEditPost #PostTitle, #FormEditPost #PostAuthorTitle,
 #PostTitle, #PostBody,
 #AttachmentTitle, #AttachmentDescription
 {
