--- a/webroot/css/imgnotes.css
+++ b/webroot/css/imgnotes.css
@@ -1,9 +1,9 @@
 .note {
 	display: none;
-	background: url(spacer.gif); 
-	border: 2px solid rgb(255, 255, 255); 
-	overflow: hidden; 
-	position: absolute; 
+	background: url(spacer.gif);
+	border: 2px solid rgb(255, 255, 255);
+	overflow: hidden;
+	position: absolute;
 	z-index: 0;
 	cursor: text;
 }
@@ -13,11 +13,11 @@
 }
 
 .notep {
-	display: none; 
-	background: #eee; 
+	display: none;
+	background: #eee;
 	font-family: Tahoma, helvetica, sans-serif;
-	font-size: 8pt; 
-	margin-top: 0px; 
+	font-size: 8pt;
+	margin-top: 0px;
 	padding: 2px;
 	position: absolute;
 	width: 175px;
@@ -36,4 +36,13 @@
 
 #NoteForm textarea{
 	width: 100%;
+}
+
+#CropForm {
+	display: none;
+	position: absolute;
+	width: 150px;
+	padding: 10px;
+	background-color:#f8f8f8;
+	border: solid 4px #a0a0a0;
 }
