--- a/webroot/sass/components/_normalize.scss
+++ b/webroot/sass/components/_normalize.scss
@@ -1,25 +1,27 @@
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
    ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
+
 html {
-  line-height: 1.15;
-  /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
    ========================================================================== */
+
 /**
  * Remove the margin in all browsers (opinionated).
  */
+
 body {
   margin: 0;
 }
@@ -27,6 +29,7 @@ body {
 /**
  * Add the correct display in IE 9-.
  */
+
 article,
 aside,
 footer,
@@ -40,6 +43,7 @@ section {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
@@ -47,20 +51,22 @@ h1 {
 
 /* Grouping content
    ========================================================================== */
+
 /**
  * Add the correct display in IE 9-.
  * 1. Add the correct display in IE.
  */
+
 figcaption,
 figure,
-main {
-  /* 1 */
+main { /* 1 */
   display: block;
 }
 
 /**
  * Add the correct margin in IE 8.
  */
+
 figure {
   margin: 1em 40px;
 }
@@ -69,55 +75,51 @@ figure {
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
+
 hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
+
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
    ========================================================================== */
+
 /**
  * 1. Remove the gray background on active links in IE 10.
  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
+
 a {
-  background-color: transparent;
-  /* 1 */
-  -webkit-text-decoration-skip: objects;
-  /* 2 */
+  background-color: transparent; /* 1 */
+  -webkit-text-decoration-skip: objects; /* 2 */
 }
 
 /**
  * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
+
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
  */
+
 b,
 strong {
   font-weight: inherit;
@@ -126,6 +128,7 @@ strong {
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
+
 b,
 strong {
   font-weight: bolder;
@@ -135,18 +138,18 @@ strong {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
+
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
  * Add the correct font style in Android 4.3-.
  */
+
 dfn {
   font-style: italic;
 }
@@ -154,6 +157,7 @@ dfn {
 /**
  * Add the correct background and color in IE 9-.
  */
+
 mark {
   background-color: #ff0;
   color: #000;
@@ -162,6 +166,7 @@ mark {
 /**
  * Add the correct font size in all browsers.
  */
+
 small {
   font-size: 80%;
 }
@@ -170,6 +175,7 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
+
 sub,
 sup {
   font-size: 75%;
@@ -188,9 +194,11 @@ sup {
 
 /* Embedded content
    ========================================================================== */
+
 /**
  * Add the correct display in IE 9-.
  */
+
 audio,
 video {
   display: inline-block;
@@ -199,6 +207,7 @@ video {
 /**
  * Add the correct display in iOS 4-7.
  */
+
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -207,6 +216,7 @@ audio:not([controls]) {
 /**
  * Remove the border on images inside links in IE 10-.
  */
+
 img {
   border-style: none;
 }
@@ -214,38 +224,37 @@ img {
 /**
  * Hide the overflow in IE.
  */
+
 svg:not(:root) {
   overflow: hidden;
 }
 
 /* Forms
    ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers (opinionated).
  * 2. Remove the margin in Firefox and Safari.
  */
+
 button,
 input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: sans-serif; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
+
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -253,9 +262,9 @@ input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
+
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -264,21 +273,22 @@ select {
  *    controls in Android 4.
  * 2. Correct the inability to style clickable types in iOS and Safari.
  */
+
 button,
-html [type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-  /* 2 */
+html [type="button"], /* 1 */
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; /* 2 */
 }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
+
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -286,16 +296,18 @@ button::-moz-focus-inner,
 /**
  * Restore the focus styles unset by the previous rule.
  */
+
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
 /**
  * Correct the padding in Firefox.
  */
+
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
@@ -306,35 +318,30 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
+
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
  * 1. Add the correct display in IE 9-.
  * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
+
 progress {
-  display: inline-block;
-  /* 1 */
-  vertical-align: baseline;
-  /* 2 */
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
 }
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
+
 textarea {
   overflow: auto;
 }
@@ -343,19 +350,19 @@ textarea {
  * 1. Add the correct box sizing in IE 10-.
  * 2. Remove the padding in IE 10-.
  */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -363,18 +370,18 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -382,20 +389,21 @@ textarea {
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
+
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
    ========================================================================== */
+
 /*
  * Add the correct display in IE 9-.
  * 1. Add the correct display in Edge, IE, and Firefox.
  */
-details,
+
+details, /* 1 */
 menu {
   display: block;
 }
@@ -403,15 +411,18 @@ menu {
 /*
  * Add the correct display in all browsers.
  */
+
 summary {
   display: list-item;
 }
 
 /* Scripting
    ========================================================================== */
+
 /**
  * Add the correct display in IE 9-.
  */
+
 canvas {
   display: inline-block;
 }
@@ -419,232 +430,18 @@ canvas {
 /**
  * Add the correct display in IE.
  */
+
 template {
   display: none;
 }
 
 /* Hidden
    ========================================================================== */
+
 /**
  * Add the correct display in IE 10-.
  */
+
 [hidden] {
   display: none;
 }
-
-#container {
-  width: 960px;
-  margin-left: auto !important;
-  margin-right: auto !important;
-}
-
-#content {
-  position: relative;
-}
-
-/* ******* */
-/* FOOTER  */
-/* ------- */
-#footer {
-  font-family: Tahoma, Arial, Helvetica, sans-serif;
-  font-size: 0.8em;
-  clear: both;
-  border-top: solid 1px #CCCCCC;
-  margin-top: 30px;
-  padding: 10px;
-  padding-top: 5px;
-}
-
-/* ****** */
-/* HEADER */
-/* ------ */
-#header {
-  height: 68px;
-}
-#header h1 {
-  margin-left: 17px;
-  padding-top: 0px;
-  line-height: 60px;
-}
-#header h1 a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 60px;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: -5px;
-  color: #CCCCCC;
-}
-#header h1 a:hover {
-  text-decoration: none;
-  color: #990000;
-}
-#header h2 {
-  border-style: none;
-  margin-left: 70px;
-  margin-top: -45px;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 30px;
-  color: #666666;
-  font-weight: lighter;
-  text-transform: lowercase;
-  font-style: italic;
-  margin-bottom: 20px;
-  line-height: 30px;
-}
-#header img {
-  display: block;
-  float: right;
-  margin-right: 15px;
-  height: 68px;
-}
-
-/* ********** */
-/* NAVIGATION */
-/* ---------- */
-#user_info, #user_info a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  color: #000000;
-}
-
-#user_info a {
-  color: #1166c6;
-}
-
-#user_info {
-  margin-top: 2px;
-}
-
-#navigation {
-  display: block;
-  height: 22px;
-  line-height: 16px;
-  border-bottom: solid 1px #CCCCCC;
-  margin-bottom: 20px;
-}
-
-#navigation ul {
-  list-style: none;
-  margin-left: 230px;
-}
-
-#navigation ul li {
-  display: block;
-  float: left;
-  height: 18px;
-  border: solid 1px #cccccc;
-  background-color: #eeeeee;
-  padding-top: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-right: 5px;
-}
-
-#navigation ul li.active {
-  background-color: #ffffff;
-  border-bottom: solid 1px #ffffff;
-}
-
-#navigation ul li a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  color: #1166c6;
-  text-decoration: none;
-}
-
-#navigation ul li:hover a {
-  color: #990000;
-  text-decoration: underline;
-}
-
-#navigation ul li.active a {
-  color: #000000;
-  text-decoration: none;
-}
-
-div#ProfileLogin {
-  width: 250px;
-  height: 356px;
-  position: relative;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  background: url(img/login.gif) center top no-repeat;
-}
-
-#ProfileLogin #YourFather, #ProfileLogin #YourMother {
-  position: absolute;
-  display: block;
-  top: 85px;
-  left: 21px;
-  width: 90px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 12px;
-  color: #404040;
-}
-
-#ProfileLogin #YourMother {
-  left: 141px;
-}
-
-#ProfileLogin form {
-  position: absolute;
-  display: block;
-  top: 160px;
-}
-
-#ProfileLogin div.input, #ProfileLogin div.submit {
-  position: relative;
-  left: 21px;
-  width: 210px;
-  text-align: center;
-  font-weight: bold;
-  margin: 0px;
-  padding-bottom: 5px;
-}
-
-#ProfileLogin label {
-  color: #000;
-  margin: 0px;
-  padding: 0px;
-  display: block;
-  float: none;
-  width: 210px;
-  text-align: center;
-  font-weight: normal;
-}
-
-#ProfileLogin input {
-  width: 140px;
-  text-align: center;
-  font-weight: bold;
-}
-
-#ProfileLogin div.checkbox {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#ProfileLogin div.checkbox input {
-  display: block;
-  float: none;
-  margin: 0px;
-  padding: 0px;
-  width: auto;
-  float: left;
-  margin-right: 10px;
-  margin-left: 50px;
-}
-
-#ProfileLogin div.checkbox label {
-  margin: 0px;
-  padding: 0px;
-  float: none;
-  display: block;
-  width: auto;
-  text-align: left;
-}
-
-/*# sourceMappingURL=main.css.map */
